# ACK

./: BACKLOG.md  README.md  ack-intent.md  ack-project-brief.md  tips.backlog.md
.claude/: CLAUDE.md
4-implementation/: README.md
_archive/: NEXT_SESSION.md  (+1 more)
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/docs/decisions/: 0001-record-architecture-decisions.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/docs/runbooks/: deploy.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/docs/sla-slo/: README.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/docs/threat-model/: README.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/observability/: README.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/security/: README.md
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/src/: app.py
ack-src/templates/project-scaffolds/cookiecutter-solo-dev/{{cookiecutter.project_slug}}/tests/: test_health.py
(+268 files in other folders)
