[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "{{cookiecutter.python_version}}"
ignore_missing_imports = true
